vlib/v/checker/tests/inout/minus_op_wrong_left_type_err_b.out
vlib/v/checker/tests/inout/minus_op_wrong_left_type_err_b.v:2:5: error: mismatched types `array_int` and `int`
    1| fn main() {
    2|     [1,2,3] - 10
           ~~~~~~~
    3| }
